WebGUI: layout bugfix: user profile top marging

--- a/webgui/app/users/user/styles.css
+++ b/webgui/app/users/user/styles.css
@@ -2,6 +2,7 @@
   font-size: 10rem;
   text-align: center;
   margin: 1rem;
+  padding-top: 4rem;
 }
 .icon {
   display: inline-block;
